--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -15,6 +15,7 @@ grandes telas: acima de 1200px
     
     section#login {
         width: 80vw;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -26,6 +27,10 @@ grandes telas: acima de 1200px
         float: right;
         width: 70%;
     }
+    div#formulario > p {
+        font-size: 1em;
+        padding: 10px;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -36,6 +41,7 @@ grandes telas: acima de 1200px
     
     section#login {
         width: 990px;
+        height: 450px;
     }
 
     section#login > div#imagem {
@@ -50,10 +56,12 @@ grandes telas: acima de 1200px
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 
     div#formulario > h1 {
         font-size: 2em;
+        
     }
 }
