--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,16 +27,18 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden; /* esconde o que fica sobrando da imagem na parte superior */
+
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.52);
-
+    
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    
 }
 
 section#login > div#imagem {
@@ -59,20 +61,43 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+    padding: 3px;
 }
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 1px solid #5f2c82;
     display: block;
-    color: white;
+    
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
     padding: 5px;
 }
 div.campo > label {
     display: none;
+}
+div.campo > i {
+    color: white;
+    
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input {
+    background-color: #9fd0ce;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 120%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-15px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
